--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="card">
             <i class="icon-tooth-brush"></i>
-            <h3 class="title">Limpesa</h3>
+            <h3 class="title">Limpeza</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio amet quam animi, provident
               consequatur soluta nam pariatur eveniet</p>
           </div>
@@ -187,7 +187,7 @@
                   quam veritatis perspiciatis consectetur adipisicing elit. Commodi pariatur
                 </p>
                 <cite>
-                  <img src="https://avatars.githubusercontent.com/u/67971884?v=4" alt="Foto de Raul Aquino">
+                  <img src="https://avatars.githubusercontent.com/u/67971884?v=4" alt="Foto de Michel">
                   Michel Martins
                 </cite>
               </blockquote>
@@ -204,8 +204,8 @@
                   quam veritatis perspiciatis consectetur adipisicing elit. Commodi pariatur
                 </p>
                 <cite>
-                  <img src="https://avatars.githubusercontent.com/u/67971884?v=4" alt="Foto de Raul Aquino">
-                  Michel Martins
+                  <img src="https://avatars.githubusercontent.com/u/73402934?s=400&u=27a359928ef12337f3a462a40a2934d74785068e&v=4" alt="Foto de Joshuel">
+                  Joshuel Nobre
                 </cite>
               </blockquote>
             </div>
